# bpmn-csp

./: BPMNModel.cabal  README.md
src/: BPMN.hs  CSP.hs
